--- a/notebooks/run_pipeline.ipynb
+++ b/notebooks/run_pipeline.ipynb
@@ -41,6 +41,7 @@
    "source": [
     "# SPAG4D (포크 버전)\n",
     "!pip install -q -e \".[all]\"\n",
+    "!pip install -q --force-reinstall \"pillow==10.2.0\"\n",
     "!pip install -q torchmetrics mmengine safetensors einops py360convert\n",
     "\n",
     "# SAM3\n",
