--- a/notebooks/run_pipeline.ipynb
+++ b/notebooks/run_pipeline.ipynb
@@ -41,7 +41,6 @@
    "source": [
     "# SPAG4D (포크 버전)\n",
     "!pip install -q -e \".[all]\"\n",
-    "!pip install -q --force-reinstall \"pillow==10.2.0\"\n",
     "!pip install -q torchmetrics mmengine safetensors einops py360convert\n",
     "\n",
     "# SAM3\n",
@@ -55,7 +54,27 @@
     "!pip install -q -r /content/ProPainter/requirements.txt\n",
     "\n",
     "import sys\n",
-    "sys.path.insert(0, '/content/ProPainter')"
+    "sys.path.insert(0, '/content/ProPainter')\n",
+    "\n",
+    "# ── Pillow 버전 고정 (반드시 마지막에 재설치) ──────────────────────────────\n",
+    "# SAM3 / ProPainter requirements가 Pillow를 9.x로 다운그레이드하므로\n",
+    "# 모든 패키지 설치 완료 후 10.2.0으로 덮어씀\n",
+    "!pip install -q --force-reinstall \"Pillow==10.2.0\"\n",
+    "print(\"설치 완료. 아래 런타임 재시작 셀을 실행하세요.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cell_restart",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ⚠ 런타임 재시작 (pip 설치 직후 최초 1회만 실행)\n",
+    "# Pillow 10.2.0이 메모리에 반영되려면 커널 재시작이 필요합니다.\n",
+    "# 이 셀 실행 후 \"런타임 연결됨\" 상태가 되면 Step 0(cell_imports)부터 다시 실행하세요.\n",
+    "import os\n",
+    "os.kill(os.getpid(), 9)\n"
    ]
   },
   {
