fix: Move Pillow reinstall to last and add runtime restart cell

--- a/notebooks/run_pipeline.ipynb
+++ b/notebooks/run_pipeline.ipynb
@@ -53,6 +53,8 @@
     "!git clone -q https://github.com/sczhou/ProPainter.git /content/ProPainter\n",
     "!pip install -q -r /content/ProPainter/requirements.txt\n",
     "\n",
+    "!pip install decord\n",
+    "\n",
     "import sys\n",
     "sys.path.insert(0, '/content/ProPainter')\n",
     "\n",
